Sample compiler plugin to find usage